# TK9_calculation_with_queue

./: CMakeLists.txt
include/: List.h  Stack.h  list_declaration.h  queue_extented.h
samples/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  test_main.cpp  test_queuecalc.cpp  test_stack.cpp
